--- a/register.html
+++ b/register.html
@@ -14,24 +14,55 @@
 <button onclick="window.location.href='index.html'">Go to Scanner</button>
 
 <script>
-const SUPABASE_URL = "https://rkmgufohlmqknqkmmduu.supabase.co";
-const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJrbWd1Zm9obG1xa25xa21tZHV1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTU4NDc2MzQsImV4cCI6MjA3MTQyMzYzNH0.aZxyaYCqD_6YcXoZDGqDkwft60lH0LaoegGc9EVwf7U";
-const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+window.onload = () => {
+    // Initialize Supabase
+    const SUPABASE_URL = "https://rkmgufohlmqknqkmmduu.supabase.co";
+    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJrbWd1Zm9obG1xa25xa21tZHV1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTU4NDc2MzQsImV4cCI6MjA3MTQyMzYzNH0.aZxyaYCqD_6YcXoZDGqDkwft60lH0LaoegGc9EVwf7U";
+    const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-document.getElementById('registerBtn').addEventListener('click', async () => {
-    const name = document.getElementById('name').value;
-    const file = document.getElementById('fileInput').files[0];
-    if(!name || !file) return alert("Enter name and choose a file");
+    // Event listener for the Register button
+    document.getElementById('registerBtn').addEventListener('click', async () => {
+        const name = document.getElementById('name').value.trim();
+        const file = document.getElementById('fileInput').files[0];
 
-    const { data, error } = await supabase.storage.from('attendees')
-        .upload(`reference_faces/${Date.now()}_${file.name}`, file);
+        if (!name) return alert("Please enter a name.");
+        if (!file) return alert("Please select a face image.");
 
-    if(error) return alert(error.message);
+        try {
+            // Upload image to Supabase Storage
+            const { data, error: uploadError } = await supabase.storage
+                .from('attendees')
+                .upload(`reference_faces/${Date.now()}_${file.name}`, file);
 
-    const imageUrl = `${SUPABASE_URL}/storage/v1/object/public/attendees/${data.path}`;
-    await supabase.from('attendees').insert([{ name, reference_image_url: imageUrl }]);
-    alert("Registered successfully!");
-});
+            if (uploadError) {
+                alert("Storage upload error: " + uploadError.message);
+                return;
+            }
+
+            // Construct public URL
+            const imageUrl = `${SUPABASE_URL}/storage/v1/object/public/attendees/${data.path}`;
+
+            // Insert attendee record into database
+            const { error: insertError } = await supabase
+                .from('attendees')
+                .insert([{ name, reference_image_url: imageUrl }]);
+
+            if (insertError) {
+                alert("Database insert error: " + insertError.message);
+                return;
+            }
+
+            alert("Registered successfully!");
+            // Optional: clear inputs
+            document.getElementById('name').value = "";
+            document.getElementById('fileInput').value = "";
+
+        } catch (err) {
+            console.error(err);
+            alert("Unexpected error: " + err.message);
+        }
+    });
+};
 </script>
 </body>
 </html>
